# SmmaTool

./: .gitignore  Greet.vue  README.md  app.vue  bun.lockb  components.json  data.json  nuxt.config.ts  package.json
components/: app-header.vue
components/leads/: DataTable.vue  columns.ts  lead-table.vue
composables/: getUserData.ts  useCreateUser.ts  usePasswordLogin.ts
layouts/: app.vue  default.vue
pages/: app.vue  auth.vue  index.vue  leads.vue  scrape.vue  update.vue
pages/app/: index.vue  leads.vue  scrape.vue  settings.vue
pages/auth/: signin.vue  signup.vue
pages/leads/: index.vue
src-tauri/: Cargo.toml  data.json  tauri.conf.json
src-tauri/src/: google_maps.rs  main.rs
stores/: user.ts
types/: LeadItem.ts  User.ts  createUserData.ts  passwordLoginData.ts
